# 74HC595

./: .gitignore  CMSIS_DAP.cfg  CMakeLists copy.txt  CMakeLists.txt  CMakeLists.txt.backup  STM32F103C8Tx_FLASH.ld  compile_commands.json  size.py  stlink.cfg
.cache/clangd/index/: Timer.c.1F80436FD385D0DC.idx  Timer.h.CE5442F39CA864A6.idx  core_cm3.c.DA73A3A4DD62BEEF.idx  core_cm3.h.C3956A874B0A7048.idx  gpio.c.3D0676780FF21FCB.idx  gpio.h.AC8E60F5E8D77716.idx  main.c.191EA54095A99D98.idx  main.h.CF0EB7A48F956E5F.idx  misc.c.00274723FA149436.idx  misc.h.C35E797EA6B04229.idx  stm32f10x.h.C63FA7FEBF00BAB1.idx  stm32f10x_adc.c.864486D1D254BDFD.idx  stm32f10x_bkp.c.9A4487AC4BB7995C.idx  stm32f10x_bkp.h.6938BD60704CDB46.idx  stm32f10x_can.c.8407531F7909A3FD.idx  stm32f10x_can.h.B0A554B28310FF3A.idx  stm32f10x_cec.c.83884F833DDA5B0F.idx  stm32f10x_cec.h.495E424CADAD7E18.idx  stm32f10x_crc.c.77D8CAFEAD6E77EA.idx  stm32f10x_crc.h.73FD443DDEA10E2A.idx  stm32f10x_dac.c.B0C37206206B691F.idx  stm32f10x_dac.h.0D4819DE2C130DCB.idx  stm32f10x_dbgmcu.c.4A16C5F607C0B0A8.idx  stm32f10x_dma.c.DB1405A6C82EA80D.idx  stm32f10x_exti.c.F0747505482CE753.idx  stm32f10x_exti.h.632EA9205E9BD3DD.idx  stm32f10x_flash.c.1C258C5079E53248.idx  stm32f10x_flash.h.940487EE7858AE93.idx  stm32f10x_fsmc.c.2EC2BFD3D150095D.idx  stm32f10x_gpio.c.EB1BA0C0B73DC198.idx  stm32f10x_i2c.c.D36AEF58D99CB4E8.idx  stm32f10x_i2c.h.D43E547C4068AA86.idx  stm32f10x_it.c.D011C7CDD54D4BC7.idx  stm32f10x_iwdg.c.C56C934EB5BA48F8.idx  stm32f10x_pwr.c.37F0EF058C816A17.idx  stm32f10x_rcc.c.4C0B002EC019B24F.idx  stm32f10x_rcc.h.021C10A70D58025A.idx  stm32f10x_rtc.c.1107BD1BC19B1BFD.idx  stm32f10x_sdio.c.89D835770797E4BA.idx  stm32f10x_sdio.h.1BFBC2FB80AE813B.idx  (+6 more)
.history/: .clang-tidy_20240421170949  .gitignore_20240418153259  .gitignore_20240421185548  CMakeLists_20240419162047.txt  CMakeLists_20240419162048.txt  CMakeLists_20240419162050.txt  CMakeLists_20240419162058.txt  CMakeLists_20240420095247.txt  CMakeLists_20240420095248.txt  CMakeLists_20240420095250.txt  CMakeLists_20240420105658.txt  CMakeLists_20240421213423.txt  CMakeLists_20240421213425.txt  CMakeLists_20240421221613.txt  CMakeLists_20240421222042.txt  CMakeLists_20240422121741.txt  CMakeLists_20240422121743.txt  CMakeLists_20240422121747.txt  CMakeLists_20240422121748.txt  CMakeLists_20240422121847.txt  CMakeLists_20240422122147.txt  CMakeLists_20240422131706.txt  CMakeLists_20240422131817.txt  CMakeLists_20240422131850.txt  CMakeLists_20240422132243.txt  CMakeLists_20240422140552.txt  CMakeLists_20240422210937.txt  CMakeLists_20240422210938.txt  CMakeLists_20240422210940.txt  CMakeLists_20240422210942.txt  CMakeLists_20240422211014.txt  CMakeLists_20240422211143.txt  CMakeLists_20240422211144.txt  CMakeLists_20240422211145.txt  CMakeLists_20240422211146.txt  CMakeLists_20240422211148.txt  STM32F103C6TX_FLASH_20240419190901.ld  STM32F103C6TX_FLASH_20240419190903.ld  STM32F103C6TX_FLASH_20240419190905.ld  STM32F103C6TX_FLASH_20240419190908.ld  (+77 more)
.history/Core/I2C/: i2c_20240421202254.c  i2c_20240421202300.h  i2c_20240421202301.h  i2c_20240421202302.h  i2c_20240421202306.h  i2c_20240421202310.h  i2c_20240421202312.h  i2c_20240421202313.h  i2c_20240421202314.h  i2c_20240421202316.h  i2c_20240421202317.h  i2c_20240421202325.h  i2c_20240421202329.h  i2c_20240421202330.h  i2c_20240421202331.h  i2c_20240421202333.h  i2c_20240421202334.h  i2c_20240421202335.h  i2c_20240421202336.h  i2c_20240421202341.c  i2c_20240421202342.c  i2c_20240421202345.c  i2c_20240421202410.c  i2c_20240421202412.c  i2c_20240421202413.c  i2c_20240421202414.c  i2c_20240421202415.c  i2c_20240421202417.c  i2c_20240421202421.c  i2c_20240421202422.c  i2c_20240421202423.c  i2c_20240421202425.c  i2c_20240421202428.c  i2c_20240421202429.c  i2c_20240421202430.c  i2c_20240421202432.c  i2c_20240421202434.c  i2c_20240421202435.c  i2c_20240422202625.c  i2c_20240422202627.c  (+340 more)
.history/Core/Inc/: 74HC595_20240418151720.h  74HC595_20240418162157.h  74HC595_20240418195401.h  74HC595_20240418195402.h  74HC595_20240418195404.h  74HC595_20240418195405.h  74HC595_20240418195406.h  74HC595_20240418221726.h  74HC595_20240418221727.h  74HC595_20240418221730.h  74HC595_20240418221731.h  74HC595_20240418221732.h  delay_20240418151720.h  delay_20240418162154.h  gpio_20240418151720.h  gpio_20240418162152.h  gpio_20240418195039.h  gpio_20240418195041.h  gpio_20240418195047.h  gpio_20240418195049.h  gpio_20240418195056.h  gpio_20240418195101.h  gpio_20240418195107.h  gpio_20240418195111.h  gpio_20240418195112.h  gpio_20240418195113.h  gpio_20240418195128.h  gpio_20240418195130.h  gpio_20240418195132.h  gpio_20240418195133.h  gpio_20240418195155.h  gpio_20240418195156.h  gpio_20240418195204.h  gpio_20240418195205.h  gpio_20240418195213.h  gpio_20240418195214.h  gpio_20240418195215.h  gpio_20240418195216.h  gpio_20240418195224.h  gpio_20240418195225.h  (+147 more)
.history/Core/MPU6050/: MPU6050_20240421155600.h  MPU6050_20240421155603.h  MPU6050_20240421155604.h  MPU6050_20240421155607.h  MPU6050_20240421155608.h  MPU6050_20240421155609.h  MPU6050_20240421155627.h  MPU6050_20240421155629.h  MPU6050_20240421155630.h  MPU6050_20240421155631.h  MPU6050_20240421155639.h  MPU6050_20240421155640.h  MPU6050_20240421155642.h  MPU6050_20240421155644.h  MPU6050_20240421160204.h  MPU6050_20240421160205.h  MPU6050_20240421160206.h  MPU6050_20240421160207.h  (+53 more)
.history/clangd/: config_20240421190448.yaml  config_20240421190502.yaml
Core/GPIO/: gpio.c
Core/I2C/: i2c.c  i2c.h
Core/Inc/: 74hc595.h  HCSR04.h  Nixie.h  Timer.h  delay.h  gpio.h  lcd1602.h  main.h  mpu6050.h  mpu6050_reg.h  my_config.h  node.h  queue.h  step.h  stm32f10x_conf.h  stm32f10x_it.h
Core/LCD1602/: lcd1602.c  lcd1602.h
Core/MPU6050/: mpu6050.c  mpu6050.h  mpu6050_reg.h
Core/Mpu6050/: inv_mpu.c  inv_mpu.h  mpu6050.c  src.tar.xz
Core/Src/: 74HC595.c  74hc595.c  HCSR04.c  Nixie.c  Timer.c  delay.c  gpio.c  lcd1602.c  main.c  mpu6050.c  node.c  step.c  stm32f10x_it.c
Core/Timer/: Timer.c  Timer.h
Core/USRT/: syscalls.c  usart.c  usart.h
Drivers/: Src.tar.xz
clangd/: config.yaml
(+350 files in other folders)
